cbits/skia_capi/skparagraph.h

SK_C_API void skparagraph_strut_style_set_height(
    skparagraph_strut_style_t *strut, sk_scalar_t height
);
SK_C_API void skparagraph_strut_style_set_leading(
    skparagraph_strut_style_t *strut, sk_scalar_t leading
);
SK_C_API void skparagraph_strut_style_set_strut_enabled(
    skparagraph_strut_style_t *strut, bool v
);
SK_C_API void skparagraph_strut_style_set_force_strut_height(
    skparagraph_strut_style_t *strut, bool v
);
SK_C_API void skparagraph_strut_style_set_height_override(
    skparagraph_strut_style_t *strut, bool v
);
SK_C_API void skparagraph_strut_style_set_half_leading(
    skparagraph_strut_style_t *strut, bool halfLeading
);
// ParagraphStyle

SK_C_API skparagraph_paragraph_style_t *skparagraph_paragraph_style_new(void);
SK_C_API void skparagraph_paragraph_style_delete(
    skparagraph_paragraph_style_t *style
);
SK_C_API void skparagraph_paragraph_style_set_strut_style(
    skparagraph_paragraph_style_t *para, skparagraph_strut_style_t *strut
);
SK_C_API void skparagraph_paragraph_style_set_text_style(
    skparagraph_paragraph_style_t *para, skparagraph_text_style_t *text
);
SK_C_API void skparagraph_paragraph_style_set_text_direction(
    skparagraph_paragraph_style_t *para, skparagraph_text_direction_t dir
);
SK_C_API void skparagraph_paragraph_style_set_text_align(
    skparagraph_paragraph_style_t *para, skparagraph_text_align_t align
);
SK_C_API void skparagraph_paragraph_style_set_max_lines(
    skparagraph_paragraph_style_t *para, size_t max_lines
);
SK_C_API void skparagraph_paragraph_style_set_ellipsis(
    skparagraph_paragraph_style_t *para, const sk_string_t *ellipsis
);
SK_C_API void skparagraph_paragraph_style_set_height(
    skparagraph_paragraph_style_t *para, sk_scalar_t height
);
SK_C_API void skparagraph_paragraph_style_set_text_height_behavior(
    skparagraph_paragraph_style_t *para,
    skparagraph_text_height_behavior_t behavior
);
SK_C_API void skparagraph_paragraph_style_set_replace_tab_characters(
    skparagraph_paragraph_style_t *para, bool v
);