src/Skia/Bindings/Skparagraph.hs


@
void skparagraph_strut_style_set_height(skparagraph_strut_style_t *strut, sk_scalar_t height)
@
-}
foreign import ccall "skparagraph_strut_style_set_height" skparagraph_strut_style_set_height ::
  Ptr (Skparagraph_strut_style) -- ^ C argument @"skparagraph_strut_style_t * strut"@
  -> Sk_scalar -- ^ C argument @"sk_scalar_t height"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_strut_style_set_height'
foreign import ccall "&skparagraph_strut_style_set_height" p'skparagraph_strut_style_set_height ::
  FunPtr (Ptr (Skparagraph_strut_style) -> Sk_scalar -> IO (()))

{- | C function signature:

@
void skparagraph_strut_style_set_leading(skparagraph_strut_style_t *strut, sk_scalar_t leading)
@
-}
foreign import ccall "skparagraph_strut_style_set_leading" skparagraph_strut_style_set_leading ::
  Ptr (Skparagraph_strut_style) -- ^ C argument @"skparagraph_strut_style_t * strut"@
  -> Sk_scalar -- ^ C argument @"sk_scalar_t leading"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_strut_style_set_leading'
foreign import ccall "&skparagraph_strut_style_set_leading" p'skparagraph_strut_style_set_leading ::
  FunPtr (Ptr (Skparagraph_strut_style) -> Sk_scalar -> IO (()))

{- | C function signature:

@
void skparagraph_strut_style_set_strut_enabled(skparagraph_strut_style_t *strut, _Bool v)
@
-}
foreign import ccall "skparagraph_strut_style_set_strut_enabled" skparagraph_strut_style_set_strut_enabled ::
  Ptr (Skparagraph_strut_style) -- ^ C argument @"skparagraph_strut_style_t * strut"@
  -> CBool -- ^ C argument @"_Bool v"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_strut_style_set_strut_enabled'
foreign import ccall "&skparagraph_strut_style_set_strut_enabled" p'skparagraph_strut_style_set_strut_enabled ::
  FunPtr (Ptr (Skparagraph_strut_style) -> CBool -> IO (()))

{- | C function signature:

@
void skparagraph_strut_style_set_force_strut_height(skparagraph_strut_style_t *strut, _Bool v)
@
-}
foreign import ccall "skparagraph_strut_style_set_force_strut_height" skparagraph_strut_style_set_force_strut_height ::
  Ptr (Skparagraph_strut_style) -- ^ C argument @"skparagraph_strut_style_t * strut"@
  -> CBool -- ^ C argument @"_Bool v"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_strut_style_set_force_strut_height'
foreign import ccall "&skparagraph_strut_style_set_force_strut_height" p'skparagraph_strut_style_set_force_strut_height ::
  FunPtr (Ptr (Skparagraph_strut_style) -> CBool -> IO (()))

{- | C function signature:

@
void skparagraph_strut_style_set_height_override(skparagraph_strut_style_t *strut, _Bool v)
@
-}
foreign import ccall "skparagraph_strut_style_set_height_override" skparagraph_strut_style_set_height_override ::
  Ptr (Skparagraph_strut_style) -- ^ C argument @"skparagraph_strut_style_t * strut"@
  -> CBool -- ^ C argument @"_Bool v"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_strut_style_set_height_override'
foreign import ccall "&skparagraph_strut_style_set_height_override" p'skparagraph_strut_style_set_height_override ::
  FunPtr (Ptr (Skparagraph_strut_style) -> CBool -> IO (()))

{- | C function signature:

@
void skparagraph_strut_style_set_half_leading(skparagraph_strut_style_t *strut, _Bool halfLeading)
@
-}
foreign import ccall "skparagraph_strut_style_set_half_leading" skparagraph_strut_style_set_half_leading ::
  Ptr (Skparagraph_strut_style) -- ^ C argument @"skparagraph_strut_style_t * strut"@
  -> CBool -- ^ C argument @"_Bool halfLeading"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_strut_style_set_half_leading'
foreign import ccall "&skparagraph_strut_style_set_half_leading" p'skparagraph_strut_style_set_half_leading ::
  FunPtr (Ptr (Skparagraph_strut_style) -> CBool -> IO (()))

{- | C function signature:

@
skparagraph_paragraph_style_t *skparagraph_paragraph_style_new(void)
@
-}
foreign import ccall "skparagraph_paragraph_style_new" skparagraph_paragraph_style_new ::
  IO (Ptr (Skparagraph_paragraph_style)) -- ^ C return type: @"skparagraph_paragraph_style_t *"@

-- | Function pointer to 'skparagraph_paragraph_style_new'
foreign import ccall "&skparagraph_paragraph_style_new" p'skparagraph_paragraph_style_new ::
  FunPtr (IO (Ptr (Skparagraph_paragraph_style)))

{- | C function signature:

@
void skparagraph_paragraph_style_delete(skparagraph_paragraph_style_t *style)
@
-}
foreign import ccall "skparagraph_paragraph_style_delete" skparagraph_paragraph_style_delete ::
  Ptr (Skparagraph_paragraph_style) -- ^ C argument @"skparagraph_paragraph_style_t * style"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_paragraph_style_delete'
foreign import ccall "&skparagraph_paragraph_style_delete" p'skparagraph_paragraph_style_delete ::
  FunPtr (Ptr (Skparagraph_paragraph_style) -> IO (()))

{- | C function signature:

@
void skparagraph_paragraph_style_set_strut_style(skparagraph_paragraph_style_t *para, skparagraph_strut_style_t *strut)
@
-}
foreign import ccall "skparagraph_paragraph_style_set_strut_style" skparagraph_paragraph_style_set_strut_style ::
  Ptr (Skparagraph_paragraph_style) -- ^ C argument @"skparagraph_paragraph_style_t * para"@
  -> Ptr (Skparagraph_strut_style) -- ^ C argument @"skparagraph_strut_style_t * strut"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_paragraph_style_set_strut_style'
foreign import ccall "&skparagraph_paragraph_style_set_strut_style" p'skparagraph_paragraph_style_set_strut_style ::
  FunPtr (Ptr (Skparagraph_paragraph_style) -> Ptr (Skparagraph_strut_style) -> IO (()))

{- | C function signature:

@
void skparagraph_paragraph_style_set_text_style(skparagraph_paragraph_style_t *para, skparagraph_text_style_t *text)
@
-}
foreign import ccall "skparagraph_paragraph_style_set_text_style" skparagraph_paragraph_style_set_text_style ::
  Ptr (Skparagraph_paragraph_style) -- ^ C argument @"skparagraph_paragraph_style_t * para"@
  -> Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * text"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_paragraph_style_set_text_style'
foreign import ccall "&skparagraph_paragraph_style_set_text_style" p'skparagraph_paragraph_style_set_text_style ::
  FunPtr (Ptr (Skparagraph_paragraph_style) -> Ptr (Skparagraph_text_style) -> IO (()))

{- | C function signature:

@
void skparagraph_paragraph_style_set_text_direction(skparagraph_paragraph_style_t *para, skparagraph_text_direction_t dir)
@
-}
foreign import ccall "skparagraph_paragraph_style_set_text_direction" skparagraph_paragraph_style_set_text_direction ::
  Ptr (Skparagraph_paragraph_style) -- ^ C argument @"skparagraph_paragraph_style_t * para"@
  -> Skparagraph_text_direction -- ^ C argument @"skparagraph_text_direction_t dir"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_paragraph_style_set_text_direction'
foreign import ccall "&skparagraph_paragraph_style_set_text_direction" p'skparagraph_paragraph_style_set_text_direction ::
  FunPtr (Ptr (Skparagraph_paragraph_style) -> Skparagraph_text_direction -> IO (()))

{- | C function signature:

@
void skparagraph_paragraph_style_set_text_align(skparagraph_paragraph_style_t *para, skparagraph_text_align_t align)
@
-}
foreign import ccall "skparagraph_paragraph_style_set_text_align" skparagraph_paragraph_style_set_text_align ::
  Ptr (Skparagraph_paragraph_style) -- ^ C argument @"skparagraph_paragraph_style_t * para"@
  -> Skparagraph_text_align -- ^ C argument @"skparagraph_text_align_t align"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_paragraph_style_set_text_align'
foreign import ccall "&skparagraph_paragraph_style_set_text_align" p'skparagraph_paragraph_style_set_text_align ::
  FunPtr (Ptr (Skparagraph_paragraph_style) -> Skparagraph_text_align -> IO (()))

{- | C function signature:

@
void skparagraph_paragraph_style_set_max_lines(skparagraph_paragraph_style_t *para, size_t max_lines)
@
-}
foreign import ccall "skparagraph_paragraph_style_set_max_lines" skparagraph_paragraph_style_set_max_lines ::
  Ptr (Skparagraph_paragraph_style) -- ^ C argument @"skparagraph_paragraph_style_t * para"@
  -> CSize -- ^ C argument @"size_t max_lines"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_paragraph_style_set_max_lines'
foreign import ccall "&skparagraph_paragraph_style_set_max_lines" p'skparagraph_paragraph_style_set_max_lines ::
  FunPtr (Ptr (Skparagraph_paragraph_style) -> CSize -> IO (()))

{- | C function signature:

@
void skparagraph_paragraph_style_set_ellipsis(skparagraph_paragraph_style_t *para, const sk_string_t *ellipsis)
@
-}
foreign import ccall "skparagraph_paragraph_style_set_ellipsis" skparagraph_paragraph_style_set_ellipsis ::
  Ptr (Skparagraph_paragraph_style) -- ^ C argument @"skparagraph_paragraph_style_t * para"@
  -> Ptr (Sk_string) -- ^ C argument @"const sk_string_t * ellipsis"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_paragraph_style_set_ellipsis'
foreign import ccall "&skparagraph_paragraph_style_set_ellipsis" p'skparagraph_paragraph_style_set_ellipsis ::
  FunPtr (Ptr (Skparagraph_paragraph_style) -> Ptr (Sk_string) -> IO (()))

{- | C function signature:

@
void skparagraph_paragraph_style_set_height(skparagraph_paragraph_style_t *para, sk_scalar_t height)
@
-}
foreign import ccall "skparagraph_paragraph_style_set_height" skparagraph_paragraph_style_set_height ::
  Ptr (Skparagraph_paragraph_style) -- ^ C argument @"skparagraph_paragraph_style_t * para"@
  -> Sk_scalar -- ^ C argument @"sk_scalar_t height"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_paragraph_style_set_height'
foreign import ccall "&skparagraph_paragraph_style_set_height" p'skparagraph_paragraph_style_set_height ::
  FunPtr (Ptr (Skparagraph_paragraph_style) -> Sk_scalar -> IO (()))

{- | C function signature:

@
void skparagraph_paragraph_style_set_text_height_behavior(skparagraph_paragraph_style_t *para, skparagraph_text_height_behavior_t behavior)
@
-}
foreign import ccall "skparagraph_paragraph_style_set_text_height_behavior" skparagraph_paragraph_style_set_text_height_behavior ::
  Ptr (Skparagraph_paragraph_style) -- ^ C argument @"skparagraph_paragraph_style_t * para"@
  -> Skparagraph_text_height_behavior -- ^ C argument @"skparagraph_text_height_behavior_t behavior"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_paragraph_style_set_text_height_behavior'
foreign import ccall "&skparagraph_paragraph_style_set_text_height_behavior" p'skparagraph_paragraph_style_set_text_height_behavior ::
  FunPtr (Ptr (Skparagraph_paragraph_style) -> Skparagraph_text_height_behavior -> IO (()))

{- | C function signature:

@
void skparagraph_paragraph_style_set_replace_tab_characters(skparagraph_paragraph_style_t *para, _Bool v)
@
-}
foreign import ccall "skparagraph_paragraph_style_set_replace_tab_characters" skparagraph_paragraph_style_set_replace_tab_characters ::
  Ptr (Skparagraph_paragraph_style) -- ^ C argument @"skparagraph_paragraph_style_t * para"@
  -> CBool -- ^ C argument @"_Bool v"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_paragraph_style_set_replace_tab_characters'
foreign import ccall "&skparagraph_paragraph_style_set_replace_tab_characters" p'skparagraph_paragraph_style_set_replace_tab_characters ::
  FunPtr (Ptr (Skparagraph_paragraph_style) -> CBool -> IO (()))

{- | C function signature:
